# superior-alpha

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.config/: dotnet-tools.json
apps/chatgpt-app/: README.md  chatgpt-app-submission.json  package.json  tsconfig.json
apps/daemon/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/daemon/: server.mjs
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ENGINE_DECISION.md  account-oauth-setup.md  agent-execution-model.md  agent-packets.md  alpha-verification.md  architecture.md  build-plan.md  chatgpt-app-port.md  chrome-web-store-listing.md  clean-ui-motion-plan.md  codex-prompt-block.md  codex-soul-brief.md  codex-sprint-gates.md  design-consultation-preview.html  design-consultation-spore-ownership.html  design-system.md  extension-privacy.md  full-product-spec.md  functional-core-sprint.md  game-feel-principles.md  game-rig-budgeting.md  mobile-3d-asset-pipeline.md  mobile-platform-plan.md  native-platform-reset.md  notion-alpha-template.md  operating-principles.md  platform-release-testing.md  prd-task-board.md  product-spec.md  production-showcase.md  release-ladder.md  release-proof-packet.md  repo-playpen-continuation-plan.md  service-runtime.md  skill-loadout-ui.md  superior-alpha-engine.md  superior-alpha-prd.md  superior-skill-cabinet.md  user-cases-player-base.md  video-proof-gate.md
superior/: README.md
tools/: purge-local-state.ps1
(+203 files in other folders)
