[package]
name = "clawdbot-desktop"
version = "0.2.0"
description = "SUPERIOR desktop shell"
edition = "2021"

[lib]
name = "clawdbot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
